deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todo-app
  namespace: default
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: todo
        image: akyldocker25/cicd-e2e:167
        ports:
        - containerPort: 8000
