deploy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-app
  namespace: default
spec:
  containers:
  - name: todo-app
    image: akyldocker25/todoapp:v1
    ports:
    - containerPort: 8000
