deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: default     # <-- add this line
spec:                   # <-- fixed typo here (was "spc")
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31000
